--- a/Facturacion/templates/index.html
+++ b/Facturacion/templates/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generate Invoice</title>
+    <title>Generar Factura</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <header>
-        <h1>Generate Invoice</h1>
+        <h1>Generar Factura</h1>
     </header>
     <main>
         <div class="form-container">
-            <input type="number" id="orderIdInput" placeholder="Enter Order ID">
-            <button id="generateInvoiceButton">Generate Invoice</button>
+            <input type="number" id="orderIdInput" placeholder="Ingrese el ID de la orden">
+            <button id="generateInvoiceButton">Generar Factura</button>
         </div>
         <div id="invoiceDetails"></div>
     </main>
